--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js",
     "dev": "ts-node server.ts",
     "build": "tsc",
+    "debug": "npm run build && node --inspect-brk dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "tessa@mantacares.com",
